Div class="column-content"

--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -38,11 +38,13 @@ layout: default-static-header
       <div class="col-2">
         <div class="column-wrapper big">
           <h2>Challenge</h2>
-          <div class="column-content">In 2020, Berezha Security Group rebranded as BSG. The next logical step was redesigning the brand book and the corporate website. But redesign was only part of the story. The ultimate goal was to make the website fast and SEO-friendly, keeping its Google PageSpeed Insights scores in the green 90-100 range. The upgrade was expected to be gradual, with the original URL kept intact to maintain ranking on Google.</div>
-          <br />
-          <div>Certain functions were to stay, too. For example, the website administrator reserved the right to change content without the programmer's or layout designer's help – just like with the previous, WordPress-powered website.</div>
-          <br />
-          <div>Developing a tool for pre-qualifying leads came as an extra task.</div>
+          <div class="column-content">
+            In 2020, Berezha Security Group rebranded as BSG. The next logical step was redesigning the brand book and the corporate website. But redesign was only part of the story. The ultimate goal was to make the website fast and SEO-friendly, keeping its Google PageSpeed Insights scores in the green 90-100 range. The upgrade was expected to be gradual, with the original URL kept intact to maintain ranking on Google.
+            <br />
+            Certain functions were to stay, too. For example, the website administrator reserved the right to change content without the programmer's or layout designer's help – just like with the previous, WordPress-powered website.
+            <br />
+            Developing a tool for pre-qualifying leads came as an extra task.
+          </div>
         </div>
         <div class="column-wrapper big">
           <div class="image" id="image2" style="background-image: url('../../assets/img/case-study/bsg/challenge2_!!.png'); background-size: contain;"></div>
