Feature/2023 01 22 add bsg usecase (#28)
* Test commit with BSG usecase
new file:   _pages/case-study/bsg/bsg.html
new file:   _pages/case-study/bsg/bsg.scss
new file:   assets/img/case-study/bsg/challenge_!!.png
new file:   assets/img/case-study/bsg/results_!!.png
new file:   assets/img/case-study/bsg/title.png

* 2nd try - after the site popierdolilo
modified:   _pages/case-study/bsg/bsg.html

* Addig the 2nd paragraph of bsg case

* BSG case initially finished

* Fix BSG case

* Fix Technologies row

* fix of top padding for results and technologies

* fix

* Fix font size for BSG and in parallel deleting extra div for Wiki case

* - Fixes in BSG case
- finding and fix in smartlane
- Adding BSG to the list of cases

* Size of technologies logos and line break before them

* Increase challenge image for mobiles

* Change in Challenge image format

* playing with background image
modified:   _pages/case-study/bsg/bsg.html

* Div class="column-content"

* div fix

--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -80,7 +80,7 @@ layout: default-static-header
             <li>Improved performance through changing the architecture and migrating to the NoSQL database.</li>
           </ul>
         </div>
-        <div class="column-content padding-top">
+        <div class="column-content">
           <div><strong>Phase 2</strong></div>
           <br />
           <div>The second stage started after a new owner purchased the project and brought many new ideas as well as SEO requirements.</div>
@@ -133,7 +133,6 @@ layout: default-static-header
             </ul>
             <br />
             <div>Today, WikiArt is well-known worldwide and recognized as one of the most popular sources of information about art. And we were happy to help it succeed.</div>
-          </div>
           </div>
       </div>
     </div>
