--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -16,18 +16,22 @@ layout: default-static-header
   <section>
     <div class="content">
       <h1>Visual art web encyclopedia</h1>
-      <div class="col-2">
+      <div class="col-2 margin-top">
         <div class="column-wrapper">
-          <div class="image" id="image1" style="background-image: url('../../assets/img/case-study/wikiart/wikiart-1.jpg')"></div>
+          <div class="image" id="image1"
+               style="background-image: url('../../assets/img/case-study/wikiart/wikiart-1.jpg')"></div>
         </div>
         <div class="column-wrapper margin-left column-content">
           <h2>Project</h2>
-          <div><strong>WikiArt.org</strong> is an online visual art encyclopedia users can edit. It can boast of more than 120 thousand artworks, up to 2.5 million visits, and about 10 million page views a month.</div>
+          <div><strong>WikiArt.org</strong> is an online visual art encyclopedia users can edit. It can boast of more
+            than 120 thousand artworks, up to 2.5 million visits, and about 10 million page views a month.
+          </div>
           <br/>
-          <div>The encyclopedia operates in seven languages and follows the wiki principle. This means that users can instantly add and edit posts while moderators keep an eye on the changes.</div>
+          <div>The encyclopedia operates in seven languages and follows the wiki principle. This means that users can
+            instantly add and edit posts while moderators keep an eye on the changes.
+          </div>
           <br/>
           <div>The American Library Association named the project one of the 15 best free reference websites.</div>
-          <br/>
           <br/>
           <div><strong>Industry</strong>: Art</div>
           <div><strong>Location</strong>: International</div>
@@ -38,11 +42,15 @@ layout: default-static-header
   <section class="section-grey">
     <div class="content">
       <div class="col-2">
-        <div class="column-wrapper column-content">
+        <div class="column-wrapper column-content margin-left">
           <h2>Challenge</h2>
-          <div>The web portal required new functions and increasing performance long before our team started working on WikiArt. The existing engine just didn't allow expanding.</div>
-          <br />
-          <div>The WikiArt team also had numerous ideas and improvements waiting to be implemented. And on top of that, the portal was in desperate need of design renovation.</div>
+          <div>The web portal required new functions and increasing performance long before our team started working on
+            WikiArt. The existing engine just didn't allow expanding.
+          </div>
+          <br/>
+          <div>The WikiArt team also had numerous ideas and improvements waiting to be implemented. And on top of that,
+            the portal was in desperate need of design renovation.
+          </div>
         </div>
         <div class="column-wrapper big">
           <div class="image" style="background-image: url('../../assets/img/case-study/wikiart/wikiart-2.png')"></div>
@@ -53,38 +61,52 @@ layout: default-static-header
   <section class="section-black">
     <div class="content">
       {% include quote/quote.html
-        avatarUrl="../../assets/img/case-study/wikiart/avatar.jpg"
-        authorName="Ievgen Silin"
-        authorPosition="Co-founder of Wikiart.org"
-        authorUrl="https://www.linkedin.com/in/trbrs/"
-        content="\"A complex project like that is always riddled with technical problems. The team that was working on it demonstrated top-notch problem-solving skills. In particular, they showed flexibility in solving challenging UX/UI issues. They successfully managed performance at the peak loads after publications on Reddit, as well as constant intensive load caused by search bots. Finally, during the migration to the updated version, the team synced operations of the old and the new solutions.\"
+      avatarUrl="../../assets/img/case-study/wikiart/avatar.jpg"
+      authorName="Ievgen Silin"
+      authorPosition="Co-founder of Wikiart.org"
+      authorUrl="https://www.linkedin.com/in/trbrs/"
+      content="\"A complex project like that is always riddled with technical problems. The team that was working on it
+      demonstrated top-notch problem-solving skills. In particular, they showed flexibility in solving challenging UX/UI
+      issues. They successfully managed performance at the peak loads after publications on Reddit, as well as constant
+      intensive load caused by search bots. Finally, during the migration to the updated version, the team synced
+      operations of the old and the new solutions.\"
 
-        I definitely recommend them."
+      I definitely recommend them."
       %}
     </div>
   </section>
   <section>
     <div class="content">
       <h2>Solution</h2>
-      <div class="text-center sub-heading">Our cooperation lasted for several years and consisted of two active development phases with a stabilization and maintenance period in between.</div>
+      <div class="text-center sub-heading">Our cooperation lasted for several years and consisted of two active
+        development phases with a stabilization and maintenance period in between.
+      </div>
       <div class="col-2">
         <div class="column-content">
           <div><strong>Phase 1</strong></div>
-          <br />
-          <div>In the first phase, we showed our extensive experience in application re-engineering by enhancing and re-designing the web portal's engine.</div>
-          <br />
+          <br/>
+          <div>In the first phase, we showed our extensive experience in application re-engineering by enhancing and
+            re-designing the web portal's engine.
+          </div>
+          <br/>
           <div>During this stage, we:</div>
           <ul>
-            <li>Implemented new features that prolong the customer journey, including user interaction functionality and advanced search.</li>
-            <li>Completely re-designed the UX/UI with attention to the user experience on both mobile devices (smartphones, tablets) and large screens.</li>
+            <li>Implemented new features that prolong the customer journey, including user interaction functionality and
+              advanced search.
+            </li>
+            <li>Completely re-designed the UX/UI with attention to the user experience on both mobile devices
+              (smartphones, tablets) and large screens.
+            </li>
             <li>Improved performance through changing the architecture and migrating to the NoSQL database.</li>
           </ul>
         </div>
         <div class="column-content">
           <div><strong>Phase 2</strong></div>
-          <br />
-          <div>The second stage started after a new owner purchased the project and brought many new ideas as well as SEO requirements.</div>
-          <br />
+          <br/>
+          <div>The second stage started after a new owner purchased the project and brought many new ideas as well as
+            SEO requirements.
+          </div>
+          <br/>
           <div>During this stage, we:</div>
           <ul>
             <li>Implemented new functions, including the video section.</li>
@@ -120,20 +142,25 @@ layout: default-static-header
         <div class="column-wrapper">
           <div class="image" style="background-image: url('../../assets/img/case-study/wikiart/wikiart-3.png')"></div>
         </div>
-        <div class="column-wrapper big">
-          <h2>Results</h2>
+        <div class="column-wrapper big remove-padding">
           <div class="column-content">
-            <div>Throughout the years of our cooperation, we helped WikiArt become a powerful, modern, best-in-class portal.</div>
-            <br />
+            <h2>Results</h2>
+            <div>Throughout the years of our cooperation, we helped WikiArt become a powerful, modern, best-in-class
+              portal.
+            </div>
+            <br/>
             <div>The achievements we're most proud of are:</div>
             <ul>
               <li>Engine performance growth by 30%.</li>
               <li>Increase of monthly visits from 1.1 to 2.3 million.</li>
               <li>WikiArt is on the first page of Google search results for art-related queries.</li>
             </ul>
-            <br />
-            <div>Today, WikiArt is well-known worldwide and recognized as one of the most popular sources of information about art. And we were happy to help it succeed.</div>
+            <br/>
+            <div>Today, WikiArt is well-known worldwide and recognized as one of the most popular sources of information
+              about art. And we were happy to help it succeed.
+            </div>
           </div>
+
       </div>
     </div>
   </section>
