--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -16,16 +16,15 @@ layout: default-static-header
   <section>
     <div class="content">
       <h1>A lightning-fast website for a reputable cybersecurity company in Ukraine</h1>
-      <div class="col-2">
+      <div class="col-2 margin-top">
         <div class="column-wrapper big">
           <div class="image" id="image1" style="background-image: url('../../assets/img/case-study/bsg/title.png')"></div>
         </div>
-        <div class="column-wrapper margin-left">
+        <div class="column-wrapper column-content margin-top margin-left">
           <h2>Client</h2>
-          <div class="column-content">Berezha Security Group is a cybersecurity services company focused on application security, penetration testing, and data security consulting.</div>
+          <div>Berezha Security Group is a cybersecurity services company focused on application security, penetration testing, and data security consulting.</div>
           <br/>
           <div>Since 2014, the company has delivered 200+ projects for over 100 clients worldwide. Its customers come from a range of business sectors, including software engineering, fintech, retail, healthcare, media, gaming, legal and advisory, and others.</div>
-          <br/>
           <br/>
           <div><strong>Industry</strong>: Cybersecurity</div>
           <div><strong>Location</strong>: Ukraine</div>
@@ -36,13 +35,13 @@ layout: default-static-header
   <section class="section-grey">
     <div class="content">
       <div class="col-2">
-        <div class="column-wrapper big">
+        <div class="column-wrapper column-content margin-left big">
           <h2>Challenge</h2>
-          <div class="column-content">In 2020, Berezha Security Group rebranded as BSG. The next logical step was redesigning the brand book and the corporate website. But redesign was only part of the story. The ultimate goal was to make the website fast and SEO-friendly, keeping its Google PageSpeed Insights scores in the green 90-100 range. The upgrade was expected to be gradual, with the original URL kept intact to maintain ranking on Google.</div>
+          <div>In 2020, Berezha Security Group rebranded as BSG. The next logical step was redesigning the brand book and the corporate website. But redesign was only part of the story. The ultimate goal was to make the website fast and SEO-friendly, keeping its Google PageSpeed Insights scores in the green 90-100 range. The upgrade was expected to be gradual, with the original URL kept intact to maintain ranking on Google.</div>
           <br />
-          <div class="column-content">Certain functions were to stay, too. For example, the website administrator reserved the right to change content without the programmer's or layout designer's help – just like with the previous, WordPress-powered website.</div>
+          <div>Certain functions were to stay, too. For example, the website administrator reserved the right to change content without the programmer's or layout designer's help – just like with the previous, WordPress-powered website.</div>
           <br />
-          <div class="column-content">Developing a tool for pre-qualifying leads came as an extra task.</div>
+          <div>Developing a tool for pre-qualifying leads came as an extra task.</div>
         </div>
         <div class="column-wrapper big">
           <div class="image" id="image2" style="background-image: url('../../assets/img/case-study/bsg/challenge2_!!.png'); background-size: contain;"></div>
@@ -64,14 +63,14 @@ layout: default-static-header
   <section>
     <div class="content">
       <h1>Solution</h1>
-      <div class="col-2">
-        <div class="column-content padding-top">
+      <div class="col-2 margin-top">
+        <div class="column-content">
           <div><strong>Design</strong></div>
           <br />
           <div>Our UI/UX specialist collaborated with BSG's marketing director to create a new design fully matching the updated brand book and the client's expectations. An Implex engineer developed a sophisticated dynamic wizard form to pre-qualify leads and integrated it into a static website.</div>
           <div>The company's blog was kept as a separate WordPress website. It was only redesigned to fit the new brand book.</div>
         </div>
-        <div class="column-content padding-top">
+        <div class="column-content">
           <div><strong>Optimization</strong></div>
           <br />
           <div>The updated website works much faster, as static pages are now generated at frontend build-time using React components.</div>
@@ -100,9 +99,9 @@ layout: default-static-header
   <section class="section-grey">
     <div class="content">
       <div class="col-2">
-        <div class="column-wrapper big">
+        <div class="column-wrapper column-content margin-left big">
           <h2>Results</h2>
-          <div class="column-content">
+          <div>
             <ul>
               <li>A brand-new design comes with perfect usability and successfully represents the BSG brand.</li>
               <li>The website scores a gorgeous 95-100 on Google PageSpeed Insights for desktop and mobile.</li>
@@ -112,7 +111,7 @@ layout: default-static-header
             </ul>
           </div>
         </div>
-        <div class="column-wrapper huge">
+        <div class="column-wrapper margin-left huge">
           <div class="image" id="image3" style="background-image: url('../../assets/img/case-study/bsg/results.webp')"></div>
         </div>
       </div>
