--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -43,7 +43,7 @@ layout: default-static-header
           <br />
           <div>Developing a tool for pre-qualifying leads came as an extra task.</div>
         </div>
-        <div class="column-wrapper big">
+        <div class="column-wrapper center-content big">
           <div class="image" id="image2" style="background-image: url('../../assets/img/case-study/bsg/challenge2_!!.png'); background-size: contain;"></div>
         </div>
       </div>
