fix redirect to main page when click 'contact-us' button in nav bar

--- a/_pages/careers/careers.html
+++ b/_pages/careers/careers.html
@@ -2,7 +2,7 @@
 permalink: '/careers'
 title: 'Careers'
 layout: default-static-header
-hideContactForm: true
+showContactForm: false
 careers: true
 ---
 
