--- a/_pages/case-study/admit-me/admit-me.html
+++ b/_pages/case-study/admit-me/admit-me.html
@@ -4,6 +4,7 @@ description: 	An example of a solution in education domain - Admit.Me project
 permalink: /case-study/admit-me
 showSlider: true
 layout: default-static-header
+showContactForm: true
 ---
 
 {% comment %}
