--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -4,6 +4,7 @@ description: A lightning-fast website for a reputable cybersecurity company in U
 permalink: /case-study/bsg
 showSlider: true
 layout: default-static-header
+showContactForm: true
 ---
 
 {% comment %}
