--- a/_pages/case-study/case-study.html
+++ b/_pages/case-study/case-study.html
@@ -3,6 +3,7 @@ permalink: '/case-study'
 title: 'Case study'
 description: Implex case studies
 layout: default-static-header
+showContactForm: true
 ---
 
 {% comment %}
