--- a/_pages/case-study/smartlane/smartlane.html
+++ b/_pages/case-study/smartlane/smartlane.html
@@ -4,6 +4,7 @@ description: An example of an extremely quick MVP - SmartLane project
 permalink: /case-study/smartlane
 showSlider: true
 layout: default-static-header
+showContactForm: true
 ---
 
 {% comment %}
