--- a/_pages/case-study/yoy/yoy.html
+++ b/_pages/case-study/yoy/yoy.html
@@ -4,6 +4,7 @@ description: An example of a solution in education domain - YoY project
 permalink: /case-study/yoy
 showSlider: true
 layout: default-static-header
+showContactForm: true
 ---
 
 {% comment %}
