--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -3,6 +3,7 @@ title: 'Implex case study: WikiArt'
 description: An example of a high-load solution in arts domain - WikiArt project
 permalink: /case-study/wikiart
 showSlider: true
+showContactForm: true
 layout: default-static-header
 ---
 
