add new meta tags

--- a/_pages/careers/careers.html
+++ b/_pages/careers/careers.html
@@ -1,9 +1,12 @@
 ---
 permalink: '/careers'
-title: 'Careers'
+title: 'Implex - custom web and mobile apps development'
 layout: default-static-header
+description: 'We offer a wide range of services in creative spheres.'
+ogDescription: 'We offer a wide range of services in creative spheres.'
 showContactForm: false
 careers: true
+keywords: ''
 ---
 
 {% comment %}
