--- a/_pages/case-study/admit-me/admit-me.html
+++ b/_pages/case-study/admit-me/admit-me.html
@@ -1,10 +1,12 @@
 ---
 title: 'Implex case study: AdmitMe'
 description: 	An example of a solution in education domain - Admit.Me project
+ogDescription: An example of a solution in education domain - Admit.Me project
 permalink: /case-study/admit-me
 showSlider: true
 layout: default-static-header
 showContactForm: true
+keywords: ''
 ---
 
 {% comment %}
