--- a/_pages/case-study/case-study.html
+++ b/_pages/case-study/case-study.html
@@ -2,8 +2,10 @@
 permalink: '/case-study'
 title: 'Case study'
 description: Implex case studies
+ogDescription: Implex case studies
 layout: default-static-header
 showContactForm: true
+keywords: ''
 ---
 
 {% comment %}
