--- a/_pages/case-study/smartlane/smartlane.html
+++ b/_pages/case-study/smartlane/smartlane.html
@@ -1,10 +1,12 @@
 ---
 title: 'Implex case study: SmartLane'
 description: An example of an extremely quick MVP - SmartLane project
+ogDescription: An example of an extremely quick MVP - SmartLane project
 permalink: /case-study/smartlane
 showSlider: true
 layout: default-static-header
 showContactForm: true
+keywords: ''
 ---
 
 {% comment %}
