--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -1,10 +1,12 @@
 ---
 title: 'Implex case study: WikiArt'
 description: An example of a high-load solution in arts domain - WikiArt project
+ogDescription: An example of a high-load solution in arts domain - WikiArt project
 permalink: /case-study/wikiart
 showSlider: true
 showContactForm: true
 layout: default-static-header
+keywords: ''
 ---
 
 {% comment %}
