--- a/_pages/blogs/blogs.html
+++ b/_pages/blogs/blogs.html
@@ -2,7 +2,10 @@
 layout: default-static-header
 permalink: '/blog'
 title: 'Implex Blog'
+description: 'Implex Blog'
+ogDescription: 'Implex Blog'
 showContactForm: true
+keywords: ''
 ---
 
 {% comment %}
