--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -1,10 +1,12 @@
 ---
 title: 'Implex case study: BSG'
 description: A lightning-fast website for a reputable cybersecurity company in Ukraine
+ogDescription: A lightning-fast website for a reputable cybersecurity company in Ukraine
 permalink: /case-study/bsg
 showSlider: true
 layout: default-static-header
 showContactForm: true
+keywords: ''
 ---
 
 {% comment %}
