--- a/_pages/case-study/yoy/yoy.html
+++ b/_pages/case-study/yoy/yoy.html
@@ -1,10 +1,12 @@
 ---
 title: 'Implex case study: YoY'
 description: An example of a solution in education domain - YoY project
+ogDescription: An example of a solution in education domain - YoY project
 permalink: /case-study/yoy
 showSlider: true
 layout: default-static-header
 showContactForm: true
+keywords: ''
 ---
 
 {% comment %}
