--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ---
 title: Implex - custom web and mobile apps development
-description: We offer a wide range of services in creative spheres.
+description: We develop web and mobile applications with the team of the best engineers equipped with reliable tools and following modern agile methodologies
+ogDescription: We develop web and mobile applications with the team of the best engineers equipped with reliable tools and following modern agile methodologies
 ogImage: ../../assets/img/og-main-image.jpg
+keywords: ''
 ---
 <!--
   ~ Copyright (c) 2022. Implex
