--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -86,8 +86,7 @@ keywords: ''
       </div>
       <div class="col-2">
         <div class="column-content">
-          <div><strong>Phase 1</strong></div>
-          <br/>
+          <div class="subtitle"><strong>Phase 1</strong></div>
           <div>In the first phase, we showed our extensive experience in application re-engineering by enhancing and
             re-designing the web portal's engine.
           </div>
@@ -104,8 +103,7 @@ keywords: ''
           </ul>
         </div>
         <div class="column-content">
-          <div><strong>Phase 2</strong></div>
-          <br/>
+          <div class="subtitle"><strong>Phase 2</strong></div>
           <div>The second stage started after a new owner purchased the project and brought many new ideas as well as
             SEO requirements.
           </div>
