--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -117,7 +117,7 @@ keywords: ''
           </ul>
         </div>
       </div>
-      <div class="text-center technologies"><strong>The tools and technologies we used were:</strong></div>
+      <div class="text-center sub-heading technologies"><strong>The tools and technologies we used were:</strong></div>
       <div class="logos-row">
         <div>
           <img src="../../assets/img/case-study/icons/C-sharp.png" alt="C# ASP .Net back-end">
