--- a/_pages/case-study/smartlane/smartlane.html
+++ b/_pages/case-study/smartlane/smartlane.html
@@ -18,7 +18,7 @@ keywords: ''
 <div class="case-study smartlane">
   <section>
     <div class="content">
-      <h1>On-line mobile and web car auction</h1>
+      <h1 class="main-title">On-line mobile and web car auction</h1>
       <div class="col-2 margin-top">
         <div class="column-wrapper big">
           <div class="image" id="image1" style="background-image: url('../../assets/img/case-study/smartlane/smartlane-1.jpg')"></div>
@@ -63,16 +63,16 @@ keywords: ''
   </section>
   <section class="remove-padding">
     <div class="content">
-      <h1>Solution</h1>
+      <h2>Solution</h2>
       <div class="col-2 margin-top">
         <div class="column-content">
-          <div class="subtitle"><strong>Phase 1</strong></div>
+          <h3 class="subtitle"><strong>Phase 1</strong></h3>
           <div>The scope of work included full architecture engineering. Our team started by implementing the core architecture that was later successfully used during the entire development process without significant changes. Other tasks covered design and back-end, front-end, and mobile development for a series of modules.</div>
           <br />
           <div>In the first stage, we coded a <strong>demo platform</strong> with the back-end and the admin panel offered to the first customers and angel investors. The mobile app for auto dealers was coded and released to AppStore, too. At the same time, our front-end engineers developed the Web UI for entering car inspection data. We also developed an <strong>emulation module</strong> with a sophisticated logic and human-like behavior to enable proxy bidding. The platform relies on <strong>fault-tolerant stateless back-end architecture</strong> that allows scaling the bidding logic and implements immediate bidding using web sockets.</div>
         </div>
         <div class="column-content">
-          <div class="subtitle"><strong>Phase 2</strong></div>
+          <h3 class="subtitle"><strong>Phase 2</strong></h3>
           <div>At the second stage, our engineers developed a mobile app for SmartLane inspectors coming to review cars and provide their feedback on 50+ parameters. Dealers now had access to a full-service Web UI.</div>
           <br />
           <div>The platform supports a <strong>full range of features</strong>:</div>
