fix heading for blogs

--- a/_pages/blogs/blogs.html
+++ b/_pages/blogs/blogs.html
@@ -17,6 +17,7 @@ keywords: ''
 
 <div class="blogs">
   <div class="content">
-    {% include blog-posts/blog-posts.html title='Implex Blog' subtitle='Whole list of blog posts' %}
+    {% include blog-posts/blog-posts.html title='Implex Blog' subtitle='Here we publish the most interesting things we
+    experienced during our work' %}
   </div>
 </div>
