Adding og:image to the use-cases page

--- a/_pages/case-study/case-study.html
+++ b/_pages/case-study/case-study.html
@@ -3,6 +3,7 @@ permalink: '/case-study'
 title: 'Case study'
 description: Implex case studies
 ogDescription: Implex case studies
+ogImage: /assets/img/clients/our-clients.png
 layout: default-static-header
 showContactForm: true
 keywords: ''
