Change og:tags for /case-study/ page, fix _site directory existance

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 title: Implex - custom web and mobile apps development
 description: We develop web and mobile applications with the team of the best engineers equipped with reliable tools and following modern agile methodologies
 ogDescription: We develop web and mobile applications with the team of the best engineers equipped with reliable tools and following modern agile methodologies
-ogImage: ../../assets/img/og-main-image.jpg
+ogImage: /assets/img/og-main-image.jpg
 keywords: ''
 ---
 <!--
