Feature/2023 02 25 seo tags review after audit2 (#47)
* Adding og:image to the use-cases page

* Change og:tags for /case-study/ page, fix _site directory existance

* Adding _site/ and .idea/ to .gitignore

--- a/_pages/case-study/case-study.html
+++ b/_pages/case-study/case-study.html
@@ -1,9 +1,10 @@
 ---
-permalink: '/case-study'
-title: 'Case study'
-description: Implex case studies
-ogDescription: Implex case studies
-layout: default-static-header
+permalink: "/case-study/"
+title: "List of Featured Case Studies | Implex"
+description: "Find examples of Implex work in mobile and web development for different business domain from education to marketplaces"
+ogDescription: "Find examples of Implex work in mobile and web development for different business domain from education to marketplaces"
+ogImage: "/assets/img/clients/our-clients.png"
+layout: "default-static-header"
 showContactForm: true
 keywords: ''
 ---
