1. Small changes during testing stories 2. Adding tail "/" to listings

--- a/_pages/blogs/blogs.html
+++ b/_pages/blogs/blogs.html
@@ -1,6 +1,6 @@
 ---
 layout: default-static-header
-permalink: '/blog'
+permalink: '/blog/'
 title: 'Implex Blog'
 description: 'Implex Blog'
 ogDescription: 'Implex Blog'
