--- a/_pages/careers/careers.html
+++ b/_pages/careers/careers.html
@@ -1,5 +1,5 @@
 ---
-permalink: '/careers'
+permalink: '/careers/'
 title: 'Implex - custom web and mobile apps development'
 layout: default-static-header
 description: 'We offer a wide range of services in creative spheres.'
