Adding SEO information to all pages except Vacancies Addig og:images for Use-case pages, blog

--- a/_pages/blogs/blogs.html
+++ b/_pages/blogs/blogs.html
@@ -1,11 +1,12 @@
 ---
 layout: default-static-header
-permalink: '/blog/'
-title: 'Implex Blog'
-description: 'Implex Blog'
-ogDescription: 'Implex Blog'
+permalink: "/blog/"
+title: "List of Useful Software Development Articles | Implex"
+description: "Experience of our outsourcing teams implementing different web and mobile products for startups and mid business in a form of easy-reading articles"
+ogDescription: "Experience of our outsourcing teams implementing different web and mobile products for startups and mid business in a form of easy-reading articles"
+ogImage: "/assets/img/articles/og-image-blog.png"
 showContactForm: true
-keywords: ''
+keywords: ""
 ---
 
 {% comment %}
