--- a/_pages/careers/careers.html
+++ b/_pages/careers/careers.html
@@ -1,12 +1,13 @@
 ---
-permalink: '/careers/'
-title: 'Implex - custom web and mobile apps development'
+permalink: "/careers/"
+title: "Open Positions in Implex"
 layout: default-static-header
-description: 'We offer a wide range of services in creative spheres.'
-ogDescription: 'We offer a wide range of services in creative spheres.'
+description: "Find a vacancy to your taste among engineering or managements positions in Implex"
+ogDescription: "Find a vacancy to your taste among engineering or managements positions in Implex"
+ogImage: "/assets/img/og-main-image.jpg"
 showContactForm: false
 careers: true
-keywords: ''
+keywords: ""
 ---
 
 {% comment %}
