--- a/_pages/case-study/admit-me/admit-me.html
+++ b/_pages/case-study/admit-me/admit-me.html
@@ -1,10 +1,11 @@
 ---
-title: 'Implex case study: AdmitMe'
-description: 	An example of a solution in education domain - Admit.Me project
-ogDescription: An example of a solution in education domain - Admit.Me project
-permalink: /case-study/admit-me
-showSlider: true
+title: "Story of the True Partnership with Admit.me for Years | Implex"
+description: 	"See how we have always been a technical partner for the US education startup Admit.me, have pivot their product several times and now are ready to scale"
+ogDescription: "See how we have always been a technical partner for the US education startup Admit.me, have pivot their product several times and now are ready to scale"
+ogImage: "/assets/img/case-study/admit-me/og-image-case-study_admit-me.png"
+permalink: "/case-study/admit-me"
 layout: default-static-header
+showSlider: true
 showContactForm: true
 keywords: ''
 ---
