--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -1,10 +1,11 @@
 ---
-title: 'Implex case study: BSG'
-description: A lightning-fast website for a reputable cybersecurity company in Ukraine
-ogDescription: A lightning-fast website for a reputable cybersecurity company in Ukraine
+title: '100% Google PageSpeed and Lighthouse Site with CMS | Implex'
+description: "See how we implemented a fast website with custom CMS and site versioning in order not to use WordPress which slows down your PageSpeed rate"
+ogDescription: "See how we implemented a fast website with custom CMS and site versioning in order not to use WordPress which slows down your PageSpeed rate"
+ogImage: "/assets/img/case-study/bsg/og-image-case-study_bsg.png"
 permalink: /case-study/bsg
-showSlider: true
 layout: default-static-header
+showSlider: true
 showContactForm: true
 keywords: ''
 ---
