--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -1,12 +1,13 @@
 ---
-title: 'Implex case study: WikiArt'
-description: An example of a high-load solution in arts domain - WikiArt project
-ogDescription: An example of a high-load solution in arts domain - WikiArt project
-permalink: /case-study/wikiart
+title: "High-load Solution in Arts Domain | Implex"
+description: "An example of a smoothly transition of the high-load WikiArt project to a new C# plus MongoDB platform with adding design and functionality"
+ogDescription: "An example of a smoothly transition of the high-load WikiArt project to a new C# plus MongoDB platform with adding design and functionality"
+ogImage: "/assets/img/case-study/wikiart/og-image-case-study_wikiart.png"
+permalink: "/case-study/wikiart"
 showSlider: true
 showContactForm: true
 layout: default-static-header
-keywords: ''
+keywords: ""
 ---
 
 {% comment %}
@@ -18,7 +19,7 @@ keywords: ''
 <div class="case-study wikiart">
   <section>
     <div class="content">
-      <h1 class="main-title">Visual art web encyclopedia</h1>
+      <h1 class="main-title">Re-engineering and re-designing of the high-load visual art web encyclopedia</h1>
       <div class="col-2 margin-top">
         <div class="column-wrapper">
           <div class="image" id="image1"
