--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
-title: Implex - custom web and mobile apps development
-description: We develop web and mobile applications with the team of the best engineers equipped with reliable tools and following modern agile methodologies
-ogDescription: We develop web and mobile applications with the team of the best engineers equipped with reliable tools and following modern agile methodologies
-ogImage: /assets/img/og-main-image.jpg
-keywords: ''
+title: "Implex: Custom Web/Mobile App Development and Outsourcing"
+description: "Find the best value for money web and mobile development teams in GoLang, JavaScript, C#, Flutter, Swift and Kotlin as well as experienced UI/UX designers"
+ogDescription: "Find the best value for money web and mobile development teams in GoLang, JavaScript, C#, Flutter, Swift and Kotlin as well as experienced UI/UX designers"
+ogImage: "/assets/img/og-main-image.jpg"
+keywords: ""
 ---
 <!--
   ~ Copyright (c) 2022. Implex
