--- a/_pages/case-study/case-study.html
+++ b/_pages/case-study/case-study.html
@@ -6,7 +6,7 @@ ogDescription: "Find examples of Implex work in mobile and web development for d
 ogImage: "/assets/img/clients/our-clients.png"
 layout: "default-static-header"
 showContactForm: true
-keywords: ''
+keywords: ""
 ---
 
 {% comment %}
