--- a/_pages/case-study/smartlane/smartlane.html
+++ b/_pages/case-study/smartlane/smartlane.html
@@ -1,12 +1,13 @@
 ---
-title: 'Implex case study: SmartLane'
-description: An example of an extremely quick MVP - SmartLane project
-ogDescription: An example of an extremely quick MVP - SmartLane project
-permalink: /case-study/smartlane
-showSlider: true
+title: "3.5 mos. MVP by the Offshore Outsourcing | Implex"
+description: "Check out how we built an extremely quick MVP for the US on-line mobile and web car auction SmartLane and then evaluated the product for a year more"
+ogDescription: "Check out how we built an extremely quick MVP for the US on-line mobile and web car auction SmartLane and then evaluated the product for a year more"
+ogImage: "/assets/img/case-study/smartlane/og-image-case-study_smartlane.png"
+permalink: "/case-study/smartlane"
 layout: default-static-header
+showSlider: true
 showContactForm: true
-keywords: ''
+keywords: ""
 ---
 
 {% comment %}
@@ -18,7 +19,7 @@ keywords: ''
 <div class="case-study smartlane">
   <section>
     <div class="content">
-      <h1 class="main-title">On-line mobile and web car auction</h1>
+      <h1 class="main-title">An extremely quick MVP for the on-line mobile and web car auction</h1>
       <div class="col-2 margin-top">
         <div class="column-wrapper big">
           <div class="image" id="image1" style="background-image: url('../../assets/img/case-study/smartlane/smartlane-1.jpg')"></div>
