--- a/_pages/case-study/yoy/yoy.html
+++ b/_pages/case-study/yoy/yoy.html
@@ -1,12 +1,13 @@
 ---
-title: 'Implex case study: YoY'
-description: An example of a solution in education domain - YoY project
-ogDescription: An example of a solution in education domain - YoY project
+title: "Education Mob App for Learning Ukrainian Language | Implex"
+description: "Cross-platform Flutter mobile app provides learn by playing abilities for primary school students in Romanian and Hungarian national minorities"
+ogDescription: "Cross-platform Flutter mobile app provides learn by playing abilities for primary school students in Romanian and Hungarian national minorities"
+ogImage: "/assets/img/case-study/yoy/og-image-case-study_yoy.png"
 permalink: /case-study/yoy
-showSlider: true
 layout: default-static-header
+showSlider: true
 showContactForm: true
-keywords: ''
+keywords: ""
 ---
 
 {% comment %}
@@ -18,7 +19,7 @@ keywords: ''
 <div class="case-study yoy">
   <section>
     <div class="content">
-      <h1 class="main-title">YOY: Ukrainian - it's cool!</h1>
+      <h1 class="main-title">Flutter Edtech App for primary school students in national minorities</h1>
       <div class="col-2 margin-top">
         <div class="column-wrapper big">
           <div
