Fix of admit.me case - og:image and the last image

--- a/_pages/case-study/admit-me/admit-me.html
+++ b/_pages/case-study/admit-me/admit-me.html
@@ -2,7 +2,7 @@
 title: "Story of the True Partnership with Admit.me for Years | Implex"
 description: 	"See how we have always been a technical partner for the US education startup Admit.me, have pivot their product several times and now are ready to scale"
 ogDescription: "See how we have always been a technical partner for the US education startup Admit.me, have pivot their product several times and now are ready to scale"
-ogImage: "/assets/img/case-study/admit-me/og-image-case-study_admit-me.png"
+ogImage: "/assets/img/case-study/admit/og-image-case-study_admit-me.png"
 permalink: "/case-study/admit-me"
 layout: default-static-header
 showSlider: true
@@ -137,7 +137,7 @@ keywords: ''
           <div>As a result, the customer found a suitable business model, closed a deal with several well-known universities (UCLA, Wharton, Duke, Emory, UNC, and others) and, generating a steady profit, is ready for the next round of investment to scale the existing model.</div>
         </div>
         <div class="column-wrapper margin-left">
-          <div class="image" id="image3" style="background-image: url('../../assets/img/case-study/admit/admit-3.jpg')"></div>
+          <div class="image" id="image3" style="background-image: url('/assets/img/case-study/admit/admit-collage.webp')"></div>
         </div>
       </div>
     </div>
