Vertical centering of use-cases pictures

--- a/_pages/case-study/admit-me/admit-me.html
+++ b/_pages/case-study/admit-me/admit-me.html
@@ -21,7 +21,7 @@ keywords: ''
     <div class="content">
       <h1 class="main-title">Education portal for college applicants</h1>
       <div class="col-2 margin-top" style="grid-template-columns: 1fr auto">
-        <div class="column-wrapper small">
+        <div class="column-wrapper center-content small">
           <div class="image" id="image1" style="background-image: url('../../assets/img/case-study/admit/admit-1.png')"></div>
         </div>
         <div class="column-wrapper column-content huge margin-left margin-top">
@@ -136,7 +136,7 @@ keywords: ''
           <br />
           <div>As a result, the customer found a suitable business model, closed a deal with several well-known universities (UCLA, Wharton, Duke, Emory, UNC, and others) and, generating a steady profit, is ready for the next round of investment to scale the existing model.</div>
         </div>
-        <div class="column-wrapper margin-left">
+        <div class="column-wrapper center-content margin-left">
           <div class="image" id="image3" style="background-image: url('/assets/img/case-study/admit/admit-collage.webp')"></div>
         </div>
       </div>
