--- a/_pages/case-study/smartlane/smartlane.html
+++ b/_pages/case-study/smartlane/smartlane.html
@@ -21,7 +21,7 @@ keywords: ""
     <div class="content">
       <h1 class="main-title">An extremely quick MVP for the on-line mobile and web car auction</h1>
       <div class="col-2 margin-top">
-        <div class="column-wrapper big">
+        <div class="column-wrapper center-content big">
           <div class="image" id="image1" style="background-image: url('../../assets/img/case-study/smartlane/smartlane-1.jpg')"></div>
         </div>
         <div class="column-wrapper column-content margin-left margin-top">
