--- a/_pages/case-study/yoy/yoy.html
+++ b/_pages/case-study/yoy/yoy.html
@@ -69,7 +69,7 @@ keywords: ""
           <br />
           <div>One of the most critical requirements was a limited budget. And we didn't have a chance to make a mistake and the opportunity to rework the application in case of failure in our solution.</div>
         </div>
-        <div class="column-wrapper big">
+        <div class="column-wrapper center-content big">
           <div
             class="image"
             id="image2"
