--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -21,7 +21,7 @@ keywords: ""
     <div class="content">
       <h1 class="main-title">Re-engineering and re-designing of the high-load visual art web encyclopedia</h1>
       <div class="col-2 margin-top">
-        <div class="column-wrapper">
+        <div class="column-wrapper center-content">
           <div class="image" id="image1"
                style="background-image: url('../../assets/img/case-study/wikiart/wikiart-1.jpg')"></div>
         </div>
