"Alt" for all pages except 3 articles and careers

--- a/_pages/blogs/blogs.html
+++ b/_pages/blogs/blogs.html
@@ -18,7 +18,7 @@ keywords: ""
 
 <div class="blogs">
   <div class="content">
-    {% include blog-posts/blog-posts.html title='Implex Blog' subtitle='Here we publish the most interesting things we
+    {% include blog-posts/blog-posts.html title='Articles on Software Development' subtitle='Here we publish the most useful things we
     experienced during our work' %}
   </div>
 </div>
