--- a/_pages/case-study/admit-me/admit-me.html
+++ b/_pages/case-study/admit-me/admit-me.html
@@ -76,11 +76,11 @@ keywords: ''
   <section>
     <div class="content">
       <h2>Solution</h2>
-      <div class="text-center sub-heading">We successfully developed an architecture that survived two pivots and a series of changes over the past few years and is still able to provide sufficient support for new features.</div>
+      <div class="text-center sub-heading">We successfully developed an architecture that survived two pivots and a series of changes over the years of true partnership and is still able to provide sufficient support for new features.</div>
       <div class="col-2">
         <div class="column-content">
           <h3 class="subtitle"><strong>Applicant profile</strong></h3>
-          <div>The system offers a sophisticated <strong>Applicant Profile</strong> with a whole set of personal data: name, education, extracurricular activities, work experience, intended majors, target schools, target cities, and industries, etc. The detailed information is put together using a comprehensive selection of dictionaries to enable analytics.
+          <div>The education portal offers a sophisticated <strong>Applicant Profile</strong> with a whole set of personal data: name, education, extracurricular activities, work experience, intended majors, target schools, target cities, and industries, etc. The detailed information is put together using a comprehensive selection of dictionaries to enable analytics.
             A smart suggestion algorithm is used to recommend friends to applicants to extend their network and boost their chances for admission. Each applicant gets visual feedback about their profile, provided by an expert.</div>
           <br />
           <h3 class="subtitle"><strong>Resources & Schools</strong></h3>
@@ -102,7 +102,7 @@ keywords: ''
             <li>Excel syncing for dictionaries with thousands of entries</li>
           </ul>
           <br />
-          <div>A variety of interaction and integration solutions ensure that future applicants stay fully updated and connected throughout the admission proces</div>
+          <div>A variety of interaction and integration solutions ensure that future applicants stay fully updated and connected throughout the admission process</div>
         </div>
       </div>
       <div class="text-center technologies"><strong>The tools and technologies we used were:</strong></div>
