--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -48,11 +48,11 @@ keywords: ""
       <div class="col-2">
         <div class="column-wrapper column-content margin-left">
           <h2>Challenge</h2>
-          <div>The web portal required new functions and increasing performance long before our team started working on
+          <div>The high-load web portal required new functions and increasing solution performance long before our team started working on
             WikiArt. The existing engine just didn't allow expanding.
           </div>
           <br/>
-          <div>The WikiArt team also had numerous ideas and improvements waiting to be implemented. And on top of that,
+          <div>The WikiArt team, who were experts in Arts Domain, also had numerous ideas and improvements waiting to be implemented. And on top of that,
             the portal was in desperate need of design renovation.
           </div>
         </div>
@@ -118,7 +118,7 @@ keywords: ""
           </ul>
         </div>
       </div>
-      <div class="text-center sub-heading technologies"><strong>The tools and technologies we used were:</strong></div>
+      <div class="text-center technologies"><strong>The tools and technologies we used were:</strong></div>
       <div class="logos-row">
         <div>
           <img src="../../assets/img/case-study/icons/C-sharp.png" alt="C# ASP .Net back-end">
