--- a/_pages/case-study/yoy/yoy.html
+++ b/_pages/case-study/yoy/yoy.html
@@ -30,7 +30,7 @@ keywords: ""
         </div>
         <div class="column-wrapper column-content margin-left margin-top">
           <h2>Project</h2>
-          <div><strong><a href="https://www.yoy-app.com/home-engl" target="_blank" rel="noopener noreferrer">YOY</a></strong> is a mobile app for learning the Ukrainian language by primary school students whose native language is Hungarian or Romanian.</div>
+          <div><strong><a href="https://www.yoy-app.com/home-engl" target="_blank" rel="noopener noreferrer nofollow">YOY</a></strong> is a mobile app for learning the Ukrainian language by primary school students whose native language is Hungarian or Romanian.</div>
           <br/>
           <div>The main goal of the app is to help to teach (for teachers) and to learn (for schoolchildren) Ukrainian in educational institutions where the educational process is conducted in the language of a national minority.</div>
           <br/>
@@ -44,16 +44,16 @@ keywords: ""
       <br/>
       <div class="logos-row yoy-logos">
         <div>
-          <img src="../../assets/img/case-study/yoy/MON.png">
+          <img alt="Ukrainian MON logo" src="/assets/img/case-study/yoy/MON.png">
         </div>
         <div>
-          <img src="../../assets/img/case-study/yoy/Ministry-for-Foreign-Affairs-of-Finland.png">
+          <img alt="Ministry for Foreign Affairs of Finland logo" src="/assets/img/case-study/yoy/Ministry-for-Foreign-Affairs-of-Finland.png">
         </div>
         <div>
-          <img src="../../assets/img/case-study/yoy/Moving-forward-together.png">
+          <img alt="Moving forward together logo" src="/assets/img/case-study/yoy/Moving-forward-together.png">
         </div>
         <div>
-          <img src="../../assets/img/case-study/yoy/fcg.png">
+          <img alt="FCG logo" src="/assets/img/case-study/yoy/fcg.png">
         </div>
       </div>
     </div>
