--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -1,5 +1,5 @@
 ---
-title: '100% Google PageSpeed and Lighthouse Site with CMS | Implex'
+title: "Site with CMS and 100% Google PageSpeed Rating | Implex"
 description: "See how we implemented a fast website with custom CMS and site versioning in order not to use WordPress which slows down your PageSpeed rate"
 ogDescription: "See how we implemented a fast website with custom CMS and site versioning in order not to use WordPress which slows down your PageSpeed rate"
 ogImage: "/assets/img/case-study/bsg/og-image-case-study_bsg.png"
