--- a/_pages/case-study/smartlane/smartlane.html
+++ b/_pages/case-study/smartlane/smartlane.html
@@ -41,7 +41,7 @@ keywords: ""
       <div class="col-2">
         <div class="column-wrapper column-content margin-left">
           <h2>Challenge</h2>
-          <div>Implex began working with SmartLane at the startup's early stage. Though the client was experienced in running startups, this time, they were on a tight budget and had only 4 months to launch an MVP.</div>
+          <div><strong>Implex</strong> began working with SmartLane at the startup's early stage as an offshore outsourcing partner. Though the client was experienced in running startups, this time, they were on a tight budget and had only 4 months to launch an MVP.</div>
           <br />
           <div>In the beginning, we only had clickable wireframes. Our task was to create a 'skeleton' of the solution while the designer was putting the finishing touches. Then, we had to launch a neatly designed MVP with a dedicated environment for demonstrating the product. The later phase required us to fully develop the product and prepare it for the next funding round.</div>
         </div>
