fix heading for tech section in cases

--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -80,7 +80,7 @@ keywords: ''
           <div>Building a new CMS from scratch equaled budget overrun. To avoid that, we reused the repository web editor. The website admin can edit existing pages or create new ones using readily available blocks.</div>
         </div>
       </div>
-      <div class="text-center technologies"><strong>The tools and technologies we used were:</strong></div>
+      <h3 class="text-center technologies">The tools and technologies we used were:</h3>
       <br />
       <div class="logos-row">
         <div>
