--- a/_pages/case-study/admit-me/admit-me.html
+++ b/_pages/case-study/admit-me/admit-me.html
@@ -105,7 +105,7 @@ keywords: ''
           <div>A variety of interaction and integration solutions ensure that future applicants stay fully updated and connected throughout the admission process</div>
         </div>
       </div>
-      <div class="text-center technologies"><strong>The tools and technologies we used were:</strong></div>
+      <h3 class="text-center technologies">The tools and technologies we used were:</h3>
       <div class="logos-row">
         <div>
           <img src="../../assets/img/case-study/icons/C-sharp.png" alt="C# ASP .Net back-end">
