--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -118,7 +118,7 @@ keywords: ""
           </ul>
         </div>
       </div>
-      <div class="text-center technologies"><strong>The tools and technologies we used were:</strong></div>
+      <h3 class="text-center technologies">The tools and technologies we used were:</h3>
       <div class="logos-row">
         <div>
           <img src="../../assets/img/case-study/icons/C-sharp.png" alt="C# ASP .Net back-end">
