--- a/_pages/case-study/yoy/yoy.html
+++ b/_pages/case-study/yoy/yoy.html
@@ -61,7 +61,7 @@ keywords: ""
   <section class="section-grey">
     <div class="content">
       <div class="col-2">
-        <div class="column-wrapper column-content margin-left">
+        <div class="column-wrapper column-content">
           <h2>Challenge</h2>
           <div>There were an unusual number of requirements and limitations crucial for project success. In addition to product owner inputs, we had also to consider the official education program, teachers' opinions, parents' focus group feedback, investor rules, etc. Many people were involved, so we had to carefully manage all received recommendations without jeopardizing the project scope, budget, and timeline.</div>
           <br />
