fix cases padding

--- a/_pages/case-study/smartlane/smartlane.html
+++ b/_pages/case-study/smartlane/smartlane.html
@@ -39,7 +39,7 @@ keywords: ""
   <section class="section-grey">
     <div class="content">
       <div class="col-2">
-        <div class="column-wrapper column-content margin-left">
+        <div class="column-wrapper column-content">
           <h2>Challenge</h2>
           <div><strong>Implex</strong> began working with SmartLane at the startup's early stage as an offshore outsourcing partner. Though the client was experienced in running startups, this time, they were on a tight budget and had only 4 months to launch an MVP.</div>
           <br />
