--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -39,7 +39,7 @@ keywords: ''
   <section class="section-grey">
     <div class="content">
       <div class="col-2">
-        <div class="column-wrapper column-content margin-left big">
+        <div class="column-wrapper column-content big">
           <h2>Challenge</h2>
           <div>In 2020, Berezha Security Group rebranded as BSG. The next logical step was redesigning the brand book and the corporate website. But redesign was only part of the story. The ultimate goal was to make the website fast and SEO-friendly, keeping its Google PageSpeed Insights scores in the green 90-100 range. The upgrade was expected to be gradual, with the original URL kept intact to maintain ranking on Google.</div>
           <br />
