--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -46,7 +46,7 @@ keywords: ""
   <section class="section-grey">
     <div class="content">
       <div class="col-2">
-        <div class="column-wrapper column-content margin-left">
+        <div class="column-wrapper column-content">
           <h2>Challenge</h2>
           <div>The high-load web portal required new functions and increasing solution performance long before our team started working on
             WikiArt. The existing engine just didn't allow expanding.
