Optimizing number of chars in the usecase titles

--- a/_pages/case-study/admit-me/admit-me.html
+++ b/_pages/case-study/admit-me/admit-me.html
@@ -19,7 +19,7 @@ keywords: ''
 <div class="case-study admit-me">
   <section>
     <div class="content">
-      <h1 class="main-title">Education portal for college applicants</h1>
+      <h1 class="main-title">Trustful cooperation in education domain with Admit.me for years</h1>
       <div class="col-2 margin-top" style="grid-template-columns: 1fr auto">
         <div class="column-wrapper center-content small">
           <div class="image" id="image1" style="background-image: url('../../assets/img/case-study/admit/admit-1.png')"></div>
