--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -19,7 +19,7 @@ keywords: ''
 <div class="case-study bsg">
   <section>
     <div class="content">
-      <h1 class="main-title">A lightning-fast website for a reputable cybersecurity company in Ukraine</h1>
+      <h1 class="main-title">A lightning-fast website for a reputable cybersec company in Ukraine</h1>
       <div class="col-2 margin-top">
         <div class="column-wrapper big">
           <div class="image" id="image1" style="background-image: url('../../assets/img/case-study/bsg/title.png')"></div>
