--- a/_pages/case-study/smartlane/smartlane.html
+++ b/_pages/case-study/smartlane/smartlane.html
@@ -19,7 +19,7 @@ keywords: ""
 <div class="case-study smartlane">
   <section>
     <div class="content">
-      <h1 class="main-title">An extremely quick MVP for the on-line mobile and web car auction</h1>
+      <h1 class="main-title">Rapid MVP for the on-line mobile and web car auction</h1>
       <div class="col-2 margin-top">
         <div class="column-wrapper center-content big">
           <div class="image" id="image1" style="background-image: url('../../assets/img/case-study/smartlane/smartlane-1.jpg')"></div>
