--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -19,7 +19,7 @@ keywords: ""
 <div class="case-study wikiart">
   <section>
     <div class="content">
-      <h1 class="main-title">Re-engineering and re-designing of the high-load visual art web encyclopedia</h1>
+      <h1 class="main-title">(R)evolution of the high-load visual art web encyclopedia</h1>
       <div class="col-2 margin-top">
         <div class="column-wrapper center-content">
           <div class="image" id="image1"
